--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,3 +1,8 @@
+@media screen and (max-height:600px) {
+    .promo {
+        padding-top: 100px;
+    }
+}
 @media screen and (max-width:1023px) {
     .promo {
         &__wrapper {
