--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,13 +1,13 @@
 header {
-    padding: 30px 0 15px;
-    background: url(../img/header-bg.png) no-repeat left 38% top 0%/24%;
+    padding: 15px 0 15px;
+    // background: url(../img/header-bg.png) no-repeat left 38% top 0%/24%;
 }
 .header {
     &__wrapper {
         display: flex;
         justify-content: space-between;
         height: 100%;
-        align-items: flex-start;
+        align-items: center;
     }
     &__city {
         font-family: 'Raleway', sans-serif;
