--- a/scss/_promo.scss
+++ b/scss/_promo.scss
@@ -3,11 +3,11 @@
     max-height: 1000px;
     background-color: #2a5add;
     background-image: url(../img/promo-img.jpg);
-    // background-image: url(../img/promo-img.jpg);
-    // background-image: 
-    //     image-set(
-    //     url("../img/promo-img.webp") type("image/webp"), 
-    //     url("../img/promo-img.jpg") type("image/jpg"));
+    
+    background-image: 
+        image-set(
+        url("../img/promo-img.webp") type("image/webp"), 
+        url("../img/promo-img.jpg") type("image/jpg"));
         
     background-position: center;
     background-repeat: no-repeat;
